# QRacer

./: Cargo.toml  README.md  app.rc  build.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
src/: app.rs  code_kind.rs  error.rs  image_io.rs  main.rs  screen_capture.rs
src/codec/: data_matrix_grid.rs  dy_grid.rs  mod.rs  qr.rs  qr_grid.rs  wx_grid.rs
src/detect/: finder_dm.rs  finder_dy.rs  finder_qr.rs  finder_wx.rs  mod.rs
src/pipeline/: grid.rs  mod.rs  perspective.rs  preprocess.rs
src/ui/: about_dialog.rs  compare_view.rs  data_matrix_panel.rs  dy_panel.rs  manual_calibration.rs  mask_panel.rs  mod.rs  support_dialog.rs  toolbar.rs  wx_panel.rs
src/vector/: diff.rs  mod.rs  shapes.rs  svg.rs
