[package]
name = "qracer"
version = "0.1.0"
edition = "2024"
description = "QR / WeChat mini-program / Douyin code screenshot vectorizer for prepress"

[dependencies]
# GUI
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.32"
egui_extras = { version = "0.32", features = ["image"] }

# 图像编解码（PNG/JPG/BMP/WebP）
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "ico", "webp"] }
imageproc = "0.25"
nalgebra = "0.33"

# QR decode/regenerate
rxing = "0.7"
qrcodegen = "1.8"

# 剪贴板：arboard 读取剪贴板图像，也负责写 SVG 文本到剪贴板
arboard = "3"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# 文件对话框
rfd = "0.15"

# 错误处理
anyhow = "1"
thiserror = "2"

[build-dependencies]
embed-resource = "3.0"

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "z" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 小工具发布包不展开 panic，减少二进制体积。
strip = true # 确保移除调试符号。
